[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/themes/DebugBlockTheme.tres" type="Theme" id=1]
[ext_resource path="res://AlgorithmScenes/Code/debug_block.gd" type="Script" id=2]

[node name="DebugBlock" type="ScrollContainer"]
margin_top = 131.0
margin_right = 234.0
margin_bottom = 431.0
rect_min_size = Vector2( 230, 300 )
mouse_filter = 2
theme = ExtResource( 1 )
scroll_horizontal_enabled = false
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="LinesContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 229.0
margin_bottom = 31.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="DebuggerTitle" type="Label" parent="LinesContainer"]
margin_right = 224.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "  Variables"
valign = 1
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
